Fix broken styles after removing pico.css

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -42,7 +42,8 @@ html {
     --font-family-heading: "Staatliches", system-ui;
     --font-family-base: "Roboto", sans-serif;
     --background-color: #ebebeb;
-    --backdrop-color: rgba(235, 235, 235, 0.7);
+    --backdrop-color: rgba(235, 235, 235, 0.9);
+	--backdrop-blur: 0.2rem;
     --border-color: #3c3c3c;
     --text-color-primary: #3c3c3c;
     --text-color-primary--light: #5c5c5c;
@@ -99,8 +100,7 @@ h6 {
 }
 
 p {
-    line-height: 1.2;
-    letter-spacing: 0.05em;
+    line-height: 1;
 }
 
 /* Base styles for links */
@@ -164,6 +164,11 @@ main {
 
 /* Base styles for dialog */
 dialog {
+	position: fixed;
+    top: 0;
+    right: 0;
+    height: 100dvh;
+    width: 100dvw;
 	border: none;
 	padding: 0;
 	margin: 0;
@@ -1003,17 +1008,15 @@ dialog {
 .gallery-item__container {
     max-width: var(--page-width);
     margin: 0 auto;
-    padding: 4rem;
-    padding-top: 0;
+    padding: 2rem;
 }
 
 .gallery-item__header {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 10rem;
 }
 
 .gallery-item__close-button {
@@ -1024,6 +1027,8 @@ dialog {
     gap: 0;
     text-decoration: none;
     transition: all 0.2s ease;
+	width: 50%;
+	padding: 1rem;
 }
 
 .gallery-item__close-button:hover {
@@ -1036,7 +1041,8 @@ dialog {
     text-transform: lowercase;
     opacity: 0;
     transition: opacity 0.2s ease;
-    width: 10rem;
+    width: 30%;
+	text-shadow: 0 0 0.5rem var(--backdrop-color);
 }
 
 .gallery-item__close-button .close-label.es {
@@ -1055,7 +1061,7 @@ dialog {
 }
 
 .gallery-item__close-button:hover .close-icon {
-    transform: scale(1.2) rotate(180deg) translateY(-0.5rem);
+    transform: rotate(360deg);
 }
 
 .gallery-item__content {
@@ -1085,8 +1091,8 @@ dialog {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 2rem 0 0;
-    height: 8rem;
+    padding: 2rem 0 4rem 0;
+    height: 13rem;
 }
 
 .gallery-item__footer .gallery-item__footer-button {
@@ -1249,6 +1255,7 @@ dialog {
     .home__social-media {
         border: 0.5rem solid var(--border-color);
         padding: 6rem 4rem;
+		transform: scale(0.9);
     }
 
     .home__social-media .social-media__link {
